# dadp-mcp-go-live

./: CLAUDE.md  MCP_HTTP_SETUP.md  README.md  justfile  package-lock.json
docs/: ARCHITECTURE.md  FRONTEND_INTEGRATION_PLAN.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_IMPLEMENTATION_PLAN.md  PRD.md
frontend/: .env  README.md  package-lock.json  package.json
frontend/src/: App.tsx  global.css  main.tsx  router.tsx
frontend/src/api/: client.ts  mockData.ts  queries.ts
frontend/src/components/: ColorMode.tsx  Docs.tsx  PageHeader.module.css  PageHeader.tsx  ReportCard.tsx  ReviewForm.tsx  RootLayout.tsx  (+1 more)
mcp-server/: .env.example  .gitignore  README.md  REDESIGN.md  claude-code-config.json  justfile  pyproject.toml  test_manual.py
mcp-server/src/mcp_golive/: __init__.py  api_client.py  config.py  models.py  server.py
mcp-server/tests/: __init__.py  test_basic.py  test_json_support.py
rust-api/: .gitignore  Cargo.toml  README.md  justfile
rust-api/.sqlx/: query-50bafc50a940fd745d64333cb69a15970ec50bfd016d27f2c0ddff1e26560650.json  query-9a23c49a568e4ee864b054199184e8ad42b29777c95037cee89787d6fd66814a.json  query-b9c2b40ba2fde5402fa3d87c86727fabaccca7cb98f7d3bad5f2e1abf94b25eb.json  query-c82488d37084fcdc5ab18f21bdd7799d04d8a1944b63fa149dbfa70434b19abf.json  query-d5edb34df409b899cb320afd78e652faa448f539bb8ee459629c5ec0419a894c.json
rust-api/migrations/: 001_create_reports.sql  002_add_structured_data.sql  003_add_raw_json.sql  004_remove_unique_repository.sql
rust-api/src/: main.rs
tools/: screenshot.js  screenshot.py
(+6 files in other folders)
